[tool.poetry]
name = "review-re, collections,-random"
version = "0.1.0"
description = ""
authors = ["Sergey Korobeynikov <skoro@smn35.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.lint.dependencies]
flake8 = "^7.1.1"
mypy = "^1.14.1"
black = "^24.10.0"
isort = "^5.13.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-cov = "^6.0.0"


[tool.isort]
# максимальная длина строки
line_length = 119

[tool.black]
# Максимальная длина строки
line-length = 119

[tool.mypy]
disallow_untyped_defs = true
warn_return_any = true


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
